Fix configuration issue of maven-surefire-plugin.